fixed spacing for form

--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -84,3 +84,11 @@ footer {
 .contact-links {
 	color: black;
 }
+
+.form-control {
+	margin-left: 7em;
+}
+
+#button {
+	margin-left: 7em;
+}
